--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,20 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<script>
+			(function() {
+				try {
+					var theme = localStorage.getItem('theme');
+					if (theme === 'light') {
+						document.documentElement.classList.add('light');
+						document.documentElement.classList.remove('dark');
+					} else {
+						document.documentElement.classList.add('dark');
+						document.documentElement.classList.remove('light');
+					}
+				} catch(e) {}
+			})();
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
